--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
+# Ignore node_modules directory
 node_modules/
+
+# Ignore files starting with "z"
+z*
+
+# Ignore .env file
+.env
+
+# Ignore artifacts directory
+/artifacts/
